Mesh not skinned #51284

Closed
opened 2017-04-22 02:33:09 +02:00 by Luciano Muñoz Sessarego · 4 comments

System Information
Windows 10 - Asus GFX1060

Blender Version
Broken: 2.78.4 hasgh e4ab70d
Worked: any other previous that i tried

Short description of error
Alembic not bringing the animation to the mesh, the locators, and other objects seem to have it though the mesh doesnt seem to be skinned.
I've tested this rig before with other versions of blender and it works great, in fact i think i reported a previous one with the same rig.

Exact steps for others to reproduce the error
open blender new file.
import ABC.
import this file perso.abc
it doesnt work, just the other object moves not the skinned mesh, i'm guessing there is a problem in the skinning / parenting, because the animation is in the file.

**System Information** Windows 10 - Asus GFX1060 **Blender Version** Broken: 2.78.4 hasgh e4ab70d Worked: any other previous that i tried **Short description of error** Alembic not bringing the animation to the mesh, the locators, and other objects seem to have it though the mesh doesnt seem to be skinned. I've tested this rig before with other versions of blender and it works great, in fact i think i reported a previous one with the same rig. **Exact steps for others to reproduce the error** open blender new file. import ABC. import this file [perso.abc](https://archive.blender.org/developer/F566604/perso.abc) it doesnt work, just the other object moves not the skinned mesh, i'm guessing there is a problem in the skinning / parenting, because the animation is in the file.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Sybren A. Stüvel self-assigned this 2017-04-25 10:01:24 +02:00

This issue was referenced by 573f6d1ec4

This issue was referenced by 573f6d1ec45f02d4dadf292433874cbced2a5f32

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51284
No description provided.