Fix T51284: Mesh not skinned